--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "fetch": "^1.1.0",
     "jsonwebtoken": "^9.0.2",
+    "node-fetch": "^2.7.0",
+    "request": "^2.88.2",
     "uuid": "^9.0.1"
   }
 }
