--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-oauth2-jwt-bearer": "^1.6.0",
     "express-openid-connect": "^2.17.1",
     "fetch": "^1.1.0",
     "jsonwebtoken": "^9.0.2",
